# nfl-dashboard

./: .gitignore  README.md  main.py  pyproject.toml
data/: 2020_Defense.csv  2020_Offense.csv  2021_Defense.csv  2021_Offense.csv  2022_Defense.csv  2022_Offense.csv  2023_Defense.csv  2023_Defense.numbers  2023_Offense.csv  2023_Offense.numbers  2024_Defense.csv  2024_Defense.numbers  2024_Offense.csv  2024_Offense.numbers
data/cleaned_data/: 2020-2024_combined_nfl_data.csv
data/input_data/: 2020_Defense.csv  2021_Defense.csv  2024_Defense.csv
src/: dashboard.py  preprocessing.py
