[project]
name = "nfl-dashboard"  
version = "0.1.0"  
description = "An NFL dashboard with season statistics visualizations"  
readme = "README.md"  
requires-python = ">=3.12"  

# Project dependencies
dependencies = [
    "matplotlib>=3.10.1",
    "dash>=2.18.2",  
    "plotly>=6.0.0", 
    "pandas>=2.2.3", 
    "numpy>=2.2.4",  
    "seaborn>=0.11.0" 
]
